# marine

./: .gitignore  AGENTS.md  README.md  download_marine_fna.sh  download_marine_prokaryotes_fna.sh  main.nf  nextflow.config  pyproject.toml  readme.md  run_smorf_all.sh  smorfinder.nf
.cursor/rules/: project-conventions.mdc
config/: config.yaml
docs/: marine-genome-selection.md  marine_genome_download_pipeline.pptx  smorfinder-pipeline.md
docs/lab-notebook/: 2026-06-16.md  2026-06-30.md  2026-07-13.md  2026-07-15.md
env/: environment.yml  nextflow-utils.yml  smorfinder-assets.sha256  smorfinder.yml
modules/: smorfinder.nf
scripts/: 00_select_marine_candidates.py  01_enrich_marine_biosample.py  02_build_manifest.py  03_fetch_tier3_metadata.py  04_download_tier3.py  05_build_tier3_manifest.py  06_standardize_genomes.py  07_dereplicate_genomes.py  08_prepare_smorfinder_inputs.py  09_summarize_smorfinder.py  10_smorfinder_preflight.py  11_run_smorfinder_task.py  12_build_smorfinder_inputs_from_index.py  13_promote_smorfinder_failures.py  generate_tier_pptx.py
src/marine_peptides/: __init__.py  config.py
src/marine_peptides/dereplicate/: __init__.py  cluster.py  emit.py  quality.py  representative.py  skani_runner.py
src/marine_peptides/download/: __init__.py  biosample.py  gtdb_metadata.py  manifest.py  marine_filter.py
src/marine_peptides/features/: __init__.py
src/marine_peptides/ml/: __init__.py
src/marine_peptides/orf_prediction/: __init__.py  smorfinder.py
src/marine_peptides/standardize/: __init__.py  (+5 more)
tests/orf_prediction/: test_smorfinder.py
(+8 files in other folders)
